<resources>
    <string name="app_name">TriGym</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Tri fit &amp; wellness</string>
    <string name="nav_header_subtitle">trifit@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    //View profile activity messages
    <string name="no_permission_to_camera">Camera access restricted or denieded. Can configure it from settings.</string>
    <string name="no_permission_to_read_external">Read external access restricted or denieded. Can configure it from settings.</string>

    <string name="lawyer_delete_confirmation_message">Do you wish to delete this member?</string>
    <string name="no_permission_to_call">You have no permission to call</string>
    <string name="profileImageSelectWarningMessage">Please enter first name and NIC number</string>
    <string name="date_pattern">yyyy-MM-dd</string>
    <string name="date_time_pattern">yyyy-MM-dd HH:mm</string>
    <string name="todoString">TODO</string>
    <string name="deleteString">Delete</string>
    <string name="emailString">Email</string>
    <string name="messageString">Message</string>
    <string name="callString">Call</string>
    <string name="title_activity_payment_list">PaymentListActivity</string>
    <string name="active_user_string">Active User</string>
    <string name="inactive_user_string">Inactive User</string>
    <string name="payment_history_btn_text">Payment History</string>
    <string name="payment_history_page_title">Payment History</string>
    <string name="edit_user_title">Edit User Profile</string>
    <string name="new_user_title">New User</string>
    <string name="main_page_search_query_hint">Search .....</string>
    <string name="daily_fee">200</string>
    <string name="one_month_fee">2500</string>
    <string name="week_fee">1000</string>
    <string name="three_month_fee">4500</string>
    <string name="six_month_fee">6000</string>
    <string name="one_year_fee">12000</string>
    <string name="membership_expire_alert">Your membership is expired. Please renew the membership</string>
    <string name="empty_field_alert">Enter value</string>
    <string name="capture_image_alert">Please get a photo</string>
    <string name="not_dob_selected_alert">Select DOB</string>
    <string name="deactivate_user_string">Deactivate</string>
    <string name="no_inactive_users_alert">No Inactive Users</string>
    <string name="payment_date_not_select_warning">Select payment date</string>
    <string name="navigation_error_warning">Navigation error please navigate to main screen</string>
    <string name="no_email_warning">No email for selected member</string>
    <string name="permission_granted">Permission granted</string>
    <string name="no_permission_granted">No permission granted. You can\'t send sms and get call</string>
    <string name="successfully_activated_message">Successfully Activated the user</string>
    <string name="preference_file_key">TriFitness</string>
    <string name="membersavedsuccessfully">Member Saved Successfully</string>
    <string name="syncsuccessfully">Sync Success</string>
    <string name="cantsaveimagewithoutnicandfirstname">Can\'t save photo without nic and first name</string>
    <string name="no_deactivated_users">No Deactivated Users</string>
    <string name="shedules">Schedules</string>
</resources>
