<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primaryWhite"
    android:orientation="vertical">

    <com.daimajia.swipe.SwipeLayout
        android:id="@+id/swipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:clickToClose="true">

        <LinearLayout
            android:id="@+id/bottom_wrapper"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/buttonRed"
            android:tag="Bottom1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/buttonRed"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/delete"
                    android:layout_width="@dimen/bottomWrapperButtonWidth"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/todoString"
                    android:paddingLeft="@dimen/bottomImagePadding"
                    android:paddingRight="@dimen/bottomImagePadding"
                    android:src="@mipmap/delete_icon" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="top|center_horizontal"
                    android:text="@string/deleteString"
                    android:textColor="@color/primaryWhite"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_wrapper_2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:tag="Bottom4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/buttonGreen"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/email"
                    android:layout_width="@dimen/bottomWrapperButtonWidth"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/bottomWrapperImagePadding"
                    android:paddingRight="@dimen/bottomWrapperImagePadding"
                    android:paddingTop="@dimen/bottomWrapperImagePadding"
                    android:contentDescription="@string/todoString"
                    android:src="@mipmap/emailicon" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="top|center_horizontal"
                    android:text="@string/emailString"
                    android:textColor="@color/primaryWhite"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/darkyellow"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/message"
                    android:layout_width="@dimen/bottomWrapperButtonWidth"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/todoString"
                    android:paddingLeft="@dimen/bottomWrapperImagePadding"
                    android:paddingRight="@dimen/bottomWrapperImagePadding"
                    android:paddingTop="@dimen/bottomWrapperImagePadding"
                    android:src="@mipmap/messageicon" />

                <TextView
                    android:id="@+id/textViewa4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="top|center_horizontal"
                    android:text="@string/messageString"
                    android:textColor="@color/primaryWhite"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#007aff"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/call"
                    android:layout_width="@dimen/bottomWrapperButtonWidth"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/todoString"
                    android:paddingLeft="@dimen/bottomWrapperImagePadding"
                    android:paddingRight="@dimen/bottomWrapperImagePadding"
                    android:paddingTop="@dimen/bottomWrapperImagePadding"
                    android:src="@mipmap/call_icon" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="top|center_horizontal"
                    android:text="@string/callString"
                    android:textColor="@color/primaryWhite"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin">

            <RelativeLayout

                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@drawable/image_border">

                <ImageView
                    android:id="@+id/imageProfile"
                    android:layout_width="@dimen/contactLawyerImageWidth"
                    android:layout_height="@dimen/contactLawyerImageWidth"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/todoString"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/client_phone_icon" />

            </RelativeLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/charcoal"
                    android:textSize="@dimen/listViewTitleFontSize" />

                <!--<TextView-->
                <!--android:id="@+id/tvEmail"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:textSize="@dimen/listViewContentFontSize" />-->

                <TextView
                    android:id="@+id/tvPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/platinum"
                    android:textSize="@dimen/listViewContentFontSize" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvMemberStatus"
                android:layout_width="@dimen/memberStatusButtonWidth"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/invalid_bg"
                android:gravity="center"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:src="@drawable/invalid_bg"
                android:text="Activate" />
        </LinearLayout>
    </com.daimajia.swipe.SwipeLayout>

    <View
        android:id="@+id/eventSeperator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/contactListMargin"
        android:background="@color/eventSeperatorColor"
        android:layout_marginStart="@dimen/contactListMargin" />
</LinearLayout>